--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 						<div class="header-text">
 							<h2>hi <span>,</span> i am <br> Shravan <br><span></span>   </h2>
 							<p>ui/ux designer and web developer</p>
-							<a href="assets/download//ShravanSS_UIDev.pdf" download>download resume</a>
+							<a href="assets/download/ShravanSS-UI-UX.pdf" download>download resume</a>
 						</div><!--/.header-text-->
 					</div><!--/.col-->
 				</div><!-- /.row-->
@@ -367,11 +367,11 @@
 										<span class="progressText"> React</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
-											   <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="10" aria-valuemax="100" style="">
+											   <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="10" aria-valuemax="100" style="">
 												    
 											   </div>
 											</div>
-											<h3>50%</h3>	
+											<h3>20%</h3>	
 										</div>
 									</div><!-- /.barWrapper -->
 								</div>
@@ -448,7 +448,7 @@
 														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
 														2019 - Present
 													</h2>
-													<h3>Software Developer</h3>
+													<h3>Web Developer</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
 										</div>
@@ -460,8 +460,8 @@
 										<div class="row">
 											<div class="col-md-5">
 												<div class="experience-time text-right">
-													<h2>2022</h2>
-													<h3>Full Stack Developer Intern</h3>
+													<h2>Nov 2023 - Feb 2024</h2>
+													<h3>UI/UX Engineer Intern</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
 											<div class="col-md-offset-1 col-md-5">
@@ -469,11 +469,14 @@
 													<div class="timeline-content">
 														<h4 class="title">
 															<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-															Queuetech Solutions
+															Prozpect Three Solutions Pvt. Ltd
 														</h4>
 														<h5>Mangaluru, Karnataka</h5>
 														<p class="description">
-															Gained hands-on experience as a Full Stack Developer, this opportunity further honed my skills in web development and design.														</p>
+															Designed the UI/UX for Headway's personalized company
+website, emphasizing intuitive navigation and user-friendly
+interfaces. Integrated front-end functionalities to complement the
+overall design approach, ensuring a seamless user experience.														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
 											</div><!--/.col-->
@@ -488,7 +491,7 @@
 												<div class="experience-time">
 													<h2>
 														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-														2019 - Present
+														2022
 													</h2>
 													<h3>Graphic Designer</h3>
 												</div><!--/.experience-time-->
@@ -497,11 +500,11 @@
 												<div class="timeline">
 													<div class="timeline-content text-right">
 														<h4 class="title">
-															Aashan Creative Studio
+															Queuetech Solutions
 														</h4>
-														<h5>Ujire, Karnataka</h5>
+														<h5>Mangaluru, Karnataka</h5>
 														<p class="description">
-															Worked as a graphic designer for various companies, organizations, colleges, YouTubers, and businesses. This diverse experience has allowed me to apply my creative skills across a wide range of projects and industries.														</p>
+															Gained hands-on experience as a Full Stack Developer, this opportunity further honed my skills in web development and design.</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
 											</div><!--/.col-->
@@ -509,9 +512,9 @@
 												<div class="experience-time">
 													<h2>
 														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-														2019 - Present
+														Jun 2022 - Sep 2022
 													</h2>
-													<h3>Graphic designer</h3>
+													<h3>FULL STACK DEVELOPER INTERN</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
 										</div>
@@ -542,18 +545,18 @@
 
 								<div class="col-sm-4">
 									<div class="item">
-										<img src="assets/images/portfolio/pro1.jpg" alt="portfolio image"/>
+										<img src="assets/images/portfolio/pro6.jpg" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a target="_blank" href="https://www.figma.com/proto/E39K0cxOYgPCqGJVjxe0Gj/esadhi.com?page-id=0%3A1&type=design&node-id=3-3&viewport=-2060%2C119%2C0.24&t=QY7eACRpijYDnlAV-1&scaling=scale-down-width&starting-point-node-id=3%3A3&mode=design">
-												esadhi.com
+											<a target="_blank" href="https://www.figma.com/proto/AejIEZQ0II33TyOo89VHbE/Accolade?page-id=0%3A1&node-id=49-273&starting-point-node-id=49%3A273&scaling=scale-down-width&mode=design&t=s87XrK2fQ6edOMFw-1">
+												Accolade Tech Solutions
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
 									<div class="item">
-										<img src="assets/images/portfolio/pro2.jpg" alt="portfolio image"/>
+										<img src="assets/images/portfolio/pro8.jpg" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a target="_blank" href="https://www.figma.com/proto/6vkTQx40KOv0o4pvorhFfO/c--space-Transactions?page-id=0%3A1&type=design&node-id=201-1141&viewport=714%2C-1348%2C0.44&t=ElWpF8ZKvAOW6RVK-1&scaling=scale-down-width&starting-point-node-id=35%3A41&mode=design">
-												c-space
+											<a target="_blank" href="https://www.figma.com/proto/Pg0UdsRJRh6YV66C6xgIlD/campus360?page-id=19%3A2&type=design&node-id=133-867&viewport=419%2C327%2C0.08&t=x3NyEGkh4nYAaur6-1&scaling=scale-down-width&starting-point-node-id=24%3A174&mode=design">
+												campus 360
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
@@ -572,10 +575,10 @@
 
 								<div class="col-sm-4">
 									<div class="item">
-										<img src="assets/images/portfolio/pro4.jpg" alt="portfolio image"/>
+										<img src="assets/images/portfolio/pro7.jpg" alt="portfolio image"/>
 										<div class="isotope-overlay">
-											<a target="_blank" href="https://www.figma.com/proto/1WAX52CgiAodcNI9S7U7jZ/Resort?page-id=0%3A1&type=design&node-id=121-148&viewport=-1532%2C720%2C0.27&t=uSRfTFAd5oWrZ4J3-1&scaling=scale-down-width&starting-point-node-id=121%3A148&mode=design">
-												KK Group Of Residency
+											<a target="_blank" href="https://www.figma.com/proto/f2bxDohajdwnDL99bSBoOM/Headvvay?page-id=482%3A188&node-id=594-192&scaling=scale-down-width&mode=design&t=0NqD6bDO7hkbhnV6-1">
+												Headway
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
