--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
 														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
 														2019 - Present
 													</h2>
-													<h3>Software Developer</h3>
+													<h3>Web Developer</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
 											<div class="col-md-5">
