--- a/index.html
+++ b/index.html
@@ -491,9 +491,9 @@ overall design approach, ensuring a seamless user experience.														</p>
 												<div class="experience-time">
 													<h2>
 														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-														2022
+														Jun 2022 - Sep 2022
 													</h2>
-													<h3>Graphic Designer</h3>
+													<h3>FULL STACK DEVELOPER INTERN</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
 											<div class="col-md-5">
